# naja

./: .bazelignore  .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmodules  .graphifyignore  .readthedocs.yaml  1  AUTHORS  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.regress  LICENSE  MODULE.bazel  README.md  README.rst  build_config.cmake  codecov.yml  data.js  gcovr.cfg  pyproject.toml  setup.py  windows_setup.ps1
bazel/: BUILD.bazel  git_version.bzl  lefdef_bison.bzl  system_tool.bzl  workspace_root.bzl
bench/: CMakeLists.txt  SNLNetlistBench.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  naja.md  requirements.txt
docs/api/: class_index.rst
docs/bne/: index.rst
docs/bne/classes/: index.rst
docs/classes/: classes_index.rst  connectivity.rst  core.rst  design.rst  nets.rst  universe.rst
docs/dnl/: index.rst
docs/dnl/classes/: index.rst
docs/naja_core/: index.rst
docs/naja_core/classes/: index.rst
docs/nl/: index.rst  uniquification.rst
docs/nl/nl/: identification.rst  index.rst
docs/nl/pnl/: index.rst
docs/nl/snl/: index.rst
docs/overview/: cloud_distribution.rst  index.rst  motivation.rst
docs/snl/: clone.rst  identification.rst  index.rst  primitives.rst  snl_cpp_api_examples.rst  snl_python_api_examples.rst  uniquification.rst
docs/snl/classes/: connectivity.rst  core.rst  (+6 more)
src/: CMakeLists.txt
src/app_snippet/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/bne/: ActionTree.cpp  ActionTree.h  BNE.cpp  BNE.h  BUILD.bazel  CMakeLists.txt  Utils.cpp  Utils.h  actions.cpp  actions.h  bne.cpp  bne.h
src/core/: BUILD.bazel  CMakeLists.txt  Card.cpp  Card.h  CardItem.h  MemoryUsage.cpp  MemoryUsage.h  NajaCollection.h  NajaDumpableProperty.cpp  NajaDumpableProperty.h  NajaException.h  NajaLog.cpp  NajaLog.h  NajaObject.cpp  NajaObject.h  NajaPerf.cpp  NajaPerf.h  NajaPrivateProperty.cpp  NajaPrivateProperty.h  NajaProperty.cpp  NajaProperty.h  NajaUtils.cpp  NajaUtils.h  NajaVersion.h.in  PerfTracker.cpp  PerfTracker.h
src/dnl/: BUILD.bazel  CMakeLists.txt  DNL.cpp  DNL.h  DNLDB.cpp  DNLDB.h  DNLEqui.cpp  DNLEqui.h  DNLInstance.cpp  DNLInstance.h  DNLSNLConstructor.cpp  DNLSNLConstructor.h  DNLTerm.cpp  DNLTerm.h  DNL_impl.h  FlatViewer.cpp  FlatViewer.h
src/formats/: CMakeLists.txt
src/gui/: CMakeLists.txt  DesignTreeView.cpp  DesignTreeView.h  Naja.cpp  Schematic.cpp  Schematic.h  SchematicSNL.cpp  SchematicSNL.h  SchematicView.cpp  SchematicView.h
src/metrics/: BUILD.bazel  CMakeLists.txt  FanoutComputer.cpp  FanoutComputer.h  LogicCone.cpp  LogicCone.h  LogicLevelComputer.cpp  LogicLevelComputer.h  SNLLogicalCone.cpp  SNLLogicalCone.h
src/naja.python/: CMakeLists.txt
src/naja_python/: CMakeLists.txt
src/najaeda/: CMakeLists.txt  README.rst
src/nl/: CMakeLists.txt
src/optimization/: BUILD.bazel  CMakeLists.txt  ConstantPropagation.cpp  ConstantPropagation.h  Reduction.cpp  Reduction.h  RemoveLoadlessLogic.cpp  RemoveLoadlessLogic.h  Utils.cpp  Utils.h
src/python/: CMakeLists.txt  PyInterface.h  PySNL.cpp  PySNLBitNet.cpp  PySNLBitNet.h  PySNLBitTerm.cpp  PySNLBitTerm.h  PySNLBusNet.cpp  PySNLBusNet.h  PySNLBusNetBit.cpp  PySNLBusNetBit.h  PySNLBusTerm.cpp  PySNLBusTerm.h  PySNLBusTermBit.cpp  PySNLBusTermBit.h  PySNLDB.cpp  PySNLDB.h  PySNLDesign.cpp  PySNLDesign.h  PySNLDesignObject.cpp  PySNLDesignObject.h  PySNLInstance.cpp  PySNLInstance.h  PySNLLibrary.cpp  PySNLLibrary.h  PySNLNet.cpp  PySNLNet.h  PySNLNetComponent.cpp  PySNLNetComponent.h  PySNLScalarNet.cpp  PySNLScalarNet.h  PySNLScalarTerm.cpp  PySNLScalarTerm.h  PySNLTerm.cpp  PySNLTerm.h  PySNLUniverse.cpp  PySNLUniverse.h
src/snippet/: SNLSnippet.cpp
src/snl/: .SNLDesign.h.swp  CMakeLists.txt  Card.cpp  Card.h  CardItem.h  MemoryUsage.cpp  PerfTracker.h  SNLBitNet.cpp  SNLBitNet.h  SNLBitTerm.cpp  SNLBitTerm.h  SNLBusNet.cpp  SNLBusNet.h  SNLBusNetBit.cpp  SNLBusNetBit.h  SNLBusTerm.cpp  SNLBusTerm.h  SNLBusTermBit.cpp  SNLBusTermBit.h  SNLCollection.h  SNLCommon.h  SNLDB.cpp  SNLDB.h  SNLDB0.cpp  SNLDB0.h  SNLDesign.cpp  SNLDesign.h  SNLDesignObject.cpp  SNLDesignObject.h  SNLDump.cpp  SNLDump.h  SNLException.h  SNLFilter.h  SNLID.cpp  SNLID.h  SNLInstTerm.cpp  SNLInstTerm.h  SNLInstance.cpp  SNLInstance.h  SNLLevelize.cpp  (+25 more)
src/tgraph/: CMakeLists.txt  Edge.cpp  Edge.h  EdgeProxy.h  Graph.cpp  Graph.h  Node.cpp  Node.h  NodeProxy.h
test/: CMakeLists.txt
test/bne/: BNETests.cpp  BUILD.bazel  CMakeLists.txt
test/core/: BUILD.bazel  CMakeLists.txt  NajaLogTests.cpp  NajaPerfTests.cpp  NajaPrivatePropertyTest.cpp  NajaProxyPropertyTest.cpp
test/dnl/: BUILD.bazel  CMakeLists.txt  DNLTests.cpp
test/logic_opt/: BUILD.bazel  CMakeLists.txt  ConstantPropagationLibertyTests.cpp  ConstantPropagationTests.cpp  LoadlessLogicRemoverTests.cpp  ReductionOptTests.cpp
test/metrics/: BUILD.bazel  CMakeLists.txt  MetricsTests.cpp
test/naja.python/: CMakeLists.txt  test_naja_netlist.py
test/naja_python/: CMakeLists.txt  test_naja_netlist.py
test/najaeda/: .coveragerc  CMakeLists.txt  setup_test_env.cmake  test_najaeda_allow_unknown_designs.py  test_najaeda_attributes.py  test_najaeda_custom_primitives.py  test_najaeda_fulladder.py  test_najaeda_gates0.py  test_najaeda_liberty_gz.py  test_najaeda_logging.py  test_najaeda_logic_vector.py  test_najaeda_modeling.py  test_najaeda_netlist.py  test_najaeda_netlist0.py  test_najaeda_netlist1.py  test_najaeda_netlist2.py  test_najaeda_netlist_errors.py  test_najaeda_netlist_primitives.py  test_najaeda_netlist_simple.py  test_najaeda_netlist_xilinx.py  test_najaeda_preprocess_enabled.py  test_najaeda_rename.py  test_najaeda_serialization.py  test_najaeda_system_verilog.py  test_najaeda_systemverilog.py  test_serialization.py
test/nl/: CMakeLists.txt
test/pnl/: CMakeLists.txt  PNLDesignTest.cpp
test/python/: CMakeLists.txt  snldb_test.py
test/snl/: CMakeLists.txt  SNLDBTest.cpp  SNLDesignTest.cpp  SNLInstanceTest.cpp  SNLLargeDBTest.cpp  SNLLibraryTest.cpp  SNLNetTest.cpp  SNLParameterTest.cpp  SNLPathTest.cpp  SNLUniverseTest.cpp
test/test_utils/: BUILD.bazel  diff_files.py
(+1862 files in other folders)
