# SPDX-FileCopyrightText: 2024 The Naja authors <https://github.com/najaeda/naja/blob/main/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "najaeda"
version = "0.1.17"
description = "Naja EDA Python package"
authors = [{name = "Naja Authors", email = "contact@keplertech.io"}]
readme = "src/najaeda/README.rst"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE="Release"
BUILD_NAJA_PYTHON="ON"
CMAKE_PREFIX_PATH = "/usr/local/lib/cmake/TBB"

[project.urls]
Homepage = "https://github.com/najaeda/naja"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos]
build-frontend = "build"
before-build = "rm -rf build dist"
before-all = '''
  brew install tbb
  curl -O https://capnproto.org/capnproto-c++-1.1.0.tar.gz
  tar zxf capnproto-c++-1.1.0.tar.gz
  cd capnproto-c++-1.1.0
  ./configure
  make -j6 check
  sudo make install
  cd ..
'''

[tool.cibuildwheel.linux]
build-frontend = "build"
before-all = '''
  yum -y install wget boost-devel
  wget https://github.com/westes/flex/releases/download/v2.6.4/flex-2.6.4.tar.gz
  tar -xvzf flex-2.6.4.tar.gz
  cd flex-2.6.4
  ./configure
  make
  make install
  cd ..
  wget http://ftp.gnu.org/gnu/bison/bison-3.8.tar.gz
  tar -xvzf bison-3.8.tar.gz
  cd bison-3.8
  ./configure
  make
  make install
  cd ..
  curl -O https://capnproto.org/capnproto-c++-1.1.0.tar.gz
  tar zxf capnproto-c++-1.1.0.tar.gz
  cd capnproto-c++-1.1.0
  ./configure
  make -j6 check
  make install
  cd ..
  wget https://github.com/uxlfoundation/oneTBB/archive/refs/tags/v2022.1.0.tar.gz
  tar xzf v2022.1.0.tar.gz
  cd oneTBB-2022.1.0
  cmake . -DCMAKE_INSTALL_PREFIX=/usr/local --DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF -DTBB_STRICT=OFF
  make
  make install
  cd ..
'''