# SPDX-FileCopyrightText: 2024 The Naja authors <https://github.com/najaeda/naja/blob/main/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "najaeda"
description = "Naja EDA Python package"
authors = [{name = "Naja Authors", email = "contact@keplertech.io"}]
readme = "src/najaeda/README.rst"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE="Release"
BUILD_NAJA_PYTHON="ON"
PREGENERATED_PARSER_SOURCES="ON"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/core/NajaVersion.h.in"
regex = 'NAJA_VERSION\s*\{\s*"(?P<value>[^"]+)"\s*\}'

[project.urls]
Homepage = "https://github.com/najaeda/naja"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos]
build-frontend = "build"
before-build = "rm -rf build dist"
before-all = '''
  brew install cmake
  echo "::group::Installing capnproto"
  curl -O https://capnproto.org/capnproto-c++-1.1.0.tar.gz
  tar -xzf capnproto-c++-1.1.0.tar.gz
  cd capnproto-c++-1.1.0
  ./configure
  make -j6 check
  sudo make install
  echo "::endgroup::"
  cd ..

  echo "::group::Installing TBB"
  wget -q https://github.com/oneapi-src/oneTBB/archive/refs/tags/v2022.1.0.tar.gz
  tar -xzf v2022.1.0.tar.gz
  mkdir TBB_build
  cd TBB_build
  cmake ../oneTBB-2022.1.0 -DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF
  make -j6
  sudo make install
  echo "::endgroup::"
  cd ..
'''

[tool.cibuildwheel.linux]
build-frontend = "build"
before-all = '''
  set -euo pipefail
  echo "::group::Updating AlmaLinux repos to use official baseurl"
  # Prefer AlmaLinux official repo baseurl over mirrorlist/metalink to avoid stale mirrors (seen on aarch64).
  shopt -s nullglob
  for f in /etc/yum.repos.d/AlmaLinux*.repo /etc/yum.repos.d/almalinux*.repo; do
    # Disable dynamic mirror selection
    sed -i 's|^mirrorlist=|#mirrorlist=|g' "$f"
    sed -i 's|^metalink=|#metalink=|g' "$f"

    # Ensure we have an active baseurl pointing at the official origin.
    # Covers both commented and uncommented forms.
    sed -i 's|^#baseurl=http://repo\.almalinux\.org/almalinux|baseurl=https://repo.almalinux.org/almalinux|g' "$f"
    sed -i 's|^#baseurl=https://repo\.almalinux\.org/almalinux|baseurl=https://repo.almalinux.org/almalinux|g' "$f"
    sed -i 's|^baseurl=http://repo\.almalinux\.org/almalinux|baseurl=https://repo.almalinux.org/almalinux|g' "$f"
  done

  yum clean all
  rm -rf /var/cache/dnf/* /var/cache/yum/* || true
  echo "::endgroup::"

  echo "::group::Installing dependencies"
  yum -y install wget boost-devel
  echo "::endgroup::"

  echo "::group::Installing TBB"
  wget -q https://github.com/oneapi-src/oneTBB/archive/refs/tags/v2022.1.0.tar.gz
  tar -xzf v2022.1.0.tar.gz
  mkdir TBB_build
  cd TBB_build
  cmake ../oneTBB-2022.1.0 -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF
  make -j$(nproc)
  make install
  echo "::endgroup::"
  cd ..
  echo "::group::Installing capnproto"
  curl -O https://capnproto.org/capnproto-c++-1.1.0.tar.gz
  tar -xzf capnproto-c++-1.1.0.tar.gz
  cd capnproto-c++-1.1.0
  ./configure
  make -j$(nproc) check
  make install
  echo "::endgroup::"
  cd ..
'''
