# SPDX-FileCopyrightText: 2023 The Naja authors <https://github.com/najaeda/naja/blob/main/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0

# Mirrors this directory's own CMakeLists.txt: builds the `naja_bne`
# library. See internal/bazel-migration-plan.md (Phase 4, task #18).

cc_library(
    name = "naja_bne",
    srcs = [
        "BNE.cpp",
        "actions.cpp",
        "Utils.cpp",
        "ActionTree.cpp",
    ],
    hdrs = [
        "BNE.h",
        "actions.h",
        "Utils.h",
        "ActionTree.h",
    ],
    copts = select({
        "@platforms//os:macos": ["-Wno-sign-conversion"],
        "//conditions:default": [],
    }),
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//src/dnl:naja_dnl",
        "//thirdparty/spdlog-1.17.0:spdlog",
        "@boost//:headers",
    ],
)
